fix code block title in dark mode

--- a/app/styles/mdx.css
+++ b/app/styles/mdx.css
@@ -29,7 +29,7 @@
   @apply rounded-md bg-slate-300 bg-opacity-10 p-1;
 }
 [data-rehype-pretty-code-title] {
-  @apply py-2 px-4 text-sm rounded-t-lg border-x border-x-white;
+  @apply py-2 px-4 text-sm rounded-t-lg border-x border-x-white dark:border-x-inherit;
   background-color: rgb(41 45 62 / 0.9);
   color: rgb(186, 190, 216);
 }
